--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cnvs/paper",
+    "name": "furkankulaber/paper",
     "description": "Canvas Default Appearance",
     "keywords": ["canvas", "theme", "paper"],
     "type": "canvas-theme",
